cleaned up documentation explanations

--- a/nbs/00_fred/00_fred.ipynb
+++ b/nbs/00_fred/00_fred.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "#| exports\n",
-    "import os\n",
+    "import os, time\n",
     "\n",
     "import pandas as pd\n",
     "from finsets.fred.fred_api import Fred\n",
@@ -225,8 +225,8 @@
      "data": {
       "text/plain": [
        "id                                                                         GDP\n",
-       "realtime_start                                                      2023-07-11\n",
-       "realtime_end                                                        2023-07-11\n",
+       "realtime_start                                                      2023-07-12\n",
+       "realtime_end                                                        2023-07-12\n",
        "title                                                   Gross Domestic Product\n",
        "observation_start                                                   1947-01-01\n",
        "observation_end                                                     2023-01-01\n",
@@ -343,8 +343,8 @@
        "      <td>1934-01-01</td>\n",
        "      <td>2023-06-01</td>\n",
        "      <td>TB3MS</td>\n",
-       "      <td>2023-07-11</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>Monthly</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
@@ -359,34 +359,34 @@
        "      <td>74</td>\n",
        "      <td>D</td>\n",
        "      <td>1954-01-04</td>\n",
-       "      <td>2023-07-07</td>\n",
+       "      <td>2023-07-11</td>\n",
        "      <td>DTB3</td>\n",
-       "      <td>2023-07-11</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>Daily</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
        "      <td>Not Seasonally Adjusted</td>\n",
        "      <td>NSA</td>\n",
-       "      <td>2023-07-10 15:22:06-05:00</td>\n",
+       "      <td>2023-07-12 15:19:06-05:00</td>\n",
        "      <td>Discount Basis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DGS3MO</th>\n",
        "      <td>Market Yield on U.S. Treasury Securities at 3-...</td>\n",
-       "      <td>73</td>\n",
+       "      <td>72</td>\n",
        "      <td>D</td>\n",
        "      <td>1981-09-01</td>\n",
-       "      <td>2023-07-07</td>\n",
+       "      <td>2023-07-11</td>\n",
        "      <td>DGS3MO</td>\n",
-       "      <td>2023-07-11</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>Daily</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
        "      <td>Not Seasonally Adjusted</td>\n",
        "      <td>NSA</td>\n",
-       "      <td>2023-07-10 15:21:14-05:00</td>\n",
+       "      <td>2023-07-12 15:19:03-05:00</td>\n",
        "      <td>For further information regarding treasury con...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -398,19 +398,19 @@
        "series id                                                                 \n",
        "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...         76   \n",
        "DTB3       3-Month Treasury Bill Secondary Market Rate, D...         74   \n",
-       "DGS3MO     Market Yield on U.S. Treasury Securities at 3-...         73   \n",
+       "DGS3MO     Market Yield on U.S. Treasury Securities at 3-...         72   \n",
        "\n",
        "          frequency_short observation_start observation_end      id  \\\n",
        "series id                                                             \n",
        "TB3MS                   M        1934-01-01      2023-06-01   TB3MS   \n",
-       "DTB3                    D        1954-01-04      2023-07-07    DTB3   \n",
-       "DGS3MO                  D        1981-09-01      2023-07-07  DGS3MO   \n",
+       "DTB3                    D        1954-01-04      2023-07-11    DTB3   \n",
+       "DGS3MO                  D        1981-09-01      2023-07-11  DGS3MO   \n",
        "\n",
        "          realtime_start realtime_end frequency    units units_short  \\\n",
        "series id                                                              \n",
-       "TB3MS         2023-07-11   2023-07-11   Monthly  Percent           %   \n",
-       "DTB3          2023-07-11   2023-07-11     Daily  Percent           %   \n",
-       "DGS3MO        2023-07-11   2023-07-11     Daily  Percent           %   \n",
+       "TB3MS         2023-07-12   2023-07-12   Monthly  Percent           %   \n",
+       "DTB3          2023-07-12   2023-07-12     Daily  Percent           %   \n",
+       "DGS3MO        2023-07-12   2023-07-12     Daily  Percent           %   \n",
        "\n",
        "               seasonal_adjustment seasonal_adjustment_short  \\\n",
        "series id                                                      \n",
@@ -421,8 +421,8 @@
        "                        last_updated  \\\n",
        "series id                              \n",
        "TB3MS      2023-07-03 15:23:09-05:00   \n",
-       "DTB3       2023-07-10 15:22:06-05:00   \n",
-       "DGS3MO     2023-07-10 15:21:14-05:00   \n",
+       "DTB3       2023-07-12 15:19:06-05:00   \n",
+       "DGS3MO     2023-07-12 15:19:03-05:00   \n",
        "\n",
        "                                                       notes  \n",
        "series id                                                     \n",
@@ -510,8 +510,8 @@
        "      <td>1934-01-01</td>\n",
        "      <td>2023-06-01</td>\n",
        "      <td>TB3MS</td>\n",
-       "      <td>2023-07-11</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>Monthly</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
@@ -526,16 +526,16 @@
        "      <td>74</td>\n",
        "      <td>D</td>\n",
        "      <td>1954-01-04</td>\n",
-       "      <td>2023-07-07</td>\n",
+       "      <td>2023-07-11</td>\n",
        "      <td>DTB3</td>\n",
-       "      <td>2023-07-11</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>Daily</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
        "      <td>Not Seasonally Adjusted</td>\n",
        "      <td>NSA</td>\n",
-       "      <td>2023-07-10 15:22:06-05:00</td>\n",
+       "      <td>2023-07-12 15:19:06-05:00</td>\n",
        "      <td>Discount Basis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -546,8 +546,8 @@
        "      <td>1954-01-08</td>\n",
        "      <td>2023-07-07</td>\n",
        "      <td>WTB3MS</td>\n",
-       "      <td>2023-07-11</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>Weekly, Ending Friday</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
@@ -570,14 +570,14 @@
        "          frequency_short observation_start observation_end      id  \\\n",
        "series id                                                             \n",
        "TB3MS                   M        1934-01-01      2023-06-01   TB3MS   \n",
-       "DTB3                    D        1954-01-04      2023-07-07    DTB3   \n",
+       "DTB3                    D        1954-01-04      2023-07-11    DTB3   \n",
        "WTB3MS                  W        1954-01-08      2023-07-07  WTB3MS   \n",
        "\n",
        "          realtime_start realtime_end              frequency    units  \\\n",
        "series id                                                               \n",
-       "TB3MS         2023-07-11   2023-07-11                Monthly  Percent   \n",
-       "DTB3          2023-07-11   2023-07-11                  Daily  Percent   \n",
-       "WTB3MS        2023-07-11   2023-07-11  Weekly, Ending Friday  Percent   \n",
+       "TB3MS         2023-07-12   2023-07-12                Monthly  Percent   \n",
+       "DTB3          2023-07-12   2023-07-12                  Daily  Percent   \n",
+       "WTB3MS        2023-07-12   2023-07-12  Weekly, Ending Friday  Percent   \n",
        "\n",
        "          units_short      seasonal_adjustment seasonal_adjustment_short  \\\n",
        "series id                                                                  \n",
@@ -588,7 +588,7 @@
        "                        last_updated  \\\n",
        "series id                              \n",
        "TB3MS      2023-07-03 15:23:09-05:00   \n",
-       "DTB3       2023-07-10 15:22:06-05:00   \n",
+       "DTB3       2023-07-12 15:19:06-05:00   \n",
        "WTB3MS     2023-07-10 15:17:12-05:00   \n",
        "\n",
        "                                               notes  \n",
@@ -604,6 +604,7 @@
     }
    ],
    "source": [
+    "time.sleep(1)\n",
     "search(\"three month treasury bill\", order_by='search_rank',nr_results=3)"
    ]
   },
