--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# wrds_api\n",
     "\n",
-    "> Fork of `wrds` package: https://github.com/wharton/wrds. See documentation of original package for more details."
+    "> Fork of `wrds` package: <https://github.com/wharton/wrds>"
    ]
   },
   {
@@ -15,9 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a fork of version 3.1.6 of the `wrds` package. It allows users to store WRDS password as environment variable `WRDS_PASS` (e.g. in GitHub Actions secrets). This facilitates testing in the CI pipeline without having to create a `pgpass` file. For local use, the preferred method is to use a `pgpass` file, not an environment variable with the WRDS password.\n",
+    "This is a fork of version 3.1.6 of the `wrds` package. The fork allows users to store their WRDS password as environment variable `WRDS_PASS` (e.g. in GitHub Actions secrets). This facilitates testing in the CI pipeline without having to create a `pgpass` file on a remote server. For local use, the preferred method is to use a `pgpass` file, not an environment variable with the WRDS password.\n",
     "\n",
-    "When establishing a connection with WRDS database, `Connection` will first look for the `WRDS_PASS` environment variable. If it can't find it, it looks for a `pgpass` file. If it can't find it, it prompts the user for a password.\n",
+    "When establishing a connection with WRDS database, `Connection` will first look for the `WRDS_PASS` environment variable. If it can't find it, it then looks for a `pgpass` file. If it can't find that either, it prompts the user for a password.\n",
     "\n",
     "Also added a `download` function which is a wrapper around the `Connection().raw_sql` method that manages the connection with WRDS for you (using a context manager)."
    ]
@@ -715,7 +715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "def download(sql_string: str=None,\n",
     "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`; prompts you if it can't find it\n",
     "             params: Sequence=None # Params cited in the `sql_string`\n",
@@ -734,7 +734,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function will prompt the user for their WRDS password, unless a `pgpass` file is set up."
+    "This function will prompt the user for their WRDS password, unless a `WRDS_PASS` environment variable is set up (not recommended unless it's in an encrypted location like a GitHub secret) or unless a `pgpass` file is set up (recommended)."
    ]
   },
   {
@@ -950,11 +950,13 @@
        "[1163 rows x 9 columns]"
       ]
      },
+     "execution_count": null,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#| eval: false\n",
     "download(\"SELECT * from ff.factors_monthly\")"
    ]
   },
@@ -962,7 +964,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## More examples using useful features of the `Connection` class"
+    "## Examples of useful features of the `Connection` class"
    ]
   },
   {
@@ -980,6 +982,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))"
    ]
   },
@@ -994,11 +997,13 @@
        "['aha_sample', 'ahasamp', 'audit', 'audit_acct_os', 'audit_audit_comp']"
       ]
      },
+     "execution_count": null,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db.list_libraries()[:5]"
    ]
   },
@@ -1013,11 +1018,13 @@
        "['acti', 'asia', 'asib', 'asic', 'asio']"
       ]
      },
+     "execution_count": null,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db.list_tables(library='crsp')[:5]"
    ]
   },
@@ -1030,7 +1037,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Approximately 879534 rows in comp.funda.\n"
+      "Approximately 879591 rows in comp.funda.\n"
      ]
     },
     {
@@ -1109,11 +1116,13 @@
        "4    consol      True        VARCHAR(2)    None"
       ]
      },
+     "execution_count": null,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db.describe_table(library='comp',table='funda').iloc[:5]"
    ]
   },
@@ -1204,11 +1213,13 @@
        "4  1926-11-01  0.0253 -0.0010 -0.0051  0.0031"
       ]
      },
+     "execution_count": null,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#| eval: false\n",
     "db.get_table(library='ff', \n",
     "             table='factors_monthly',\n",
     "             columns=['date','mktrf','smb','hml','rf'],\n",
@@ -1221,6 +1232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| eval: false\n",
     "db.close()"
    ]
   },
