--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -82,16 +82,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; else `permno`, `permco`, `date`, and 'exchcd' are added by default\n",
-    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
-    "             start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
-    "             end_date: str=None # End date in MM/DD/YYYY format; if None, defaults to current date             \n",
-    "             ) -> pd.DataFrame:\n",
-    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS crsp.msf and crsp.msenames libraries. \n",
-    "        Creates `ret_adj` for delisting based on Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
+    "def parse_varlist(vars: List[str]=None,\n",
+    "                  wrds_username: str=None\n",
+    "                  ) -> str:\n",
+    "    \"\"\"Figure out which `vars` come from the `crsp.msf` table and which come from the `crsp.msenames` table and add a. and b. prefixes\"\"\"\n",
     "\n",
-    "#THIS SHOULD BE IN ITS OWN FUNCTION\n",
     "    if wrds_username is None:\n",
     "        wrds_username = os.getenv('WRDS_USERNAME')\n",
     "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
@@ -99,42 +94,67 @@
     "    if vars is None: vars = default_raw_vars()\n",
     "    vars = ['permno','permco','date','exchcd'] + [x for x in vars if x not in ['permno','permco','date','exchcd']]\n",
     "\n",
-    "    # Figure out which `vars` come from the `msf` table and which come from the `msenames` table and add a. and b. prefixes\n",
-    "    db = wrds_api.Connection(wrds_username = wrds_username)\n",
-    "    try:\n",
+    "    with wrds_api.Connection(wrds_username = wrds_username) as db:\n",
     "        all_msf_vars = list(db.describe_table('crsp','msf').name)\n",
     "        all_mse_vars = list(db.describe_table('crsp','msenames').name)\n",
     "        my_msf_vars = [f'a.{x}' for x in vars if x in all_msf_vars]\n",
     "        my_mse_vars = [f'b.{x}' for x in vars if (x in all_mse_vars) and (x not in all_msf_vars)]\n",
     "        varlist_string = ','.join(my_msf_vars + my_mse_vars)\n",
-    "    except:\n",
-    "        raise RuntimeError(\"Something went wrong with a WRDS database connection\")\n",
-    "    finally: db.close()\n",
-    "##########################################\n",
+    "    return varlist_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delist_adj_ret(df: pd.DataFrame, # Requires `ret`,`exchcd`, ` `dlret`, and `dlstcd` variables\n",
+    "                       adj_ret_var: str\n",
+    "                       ) -> pd.DataFrame:\n",
+    "    \"\"\"Adjust for delisting returns using Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
     "\n",
-    "    sql_string = f\"\"\"SELECT {varlist_string},  c.dlstcd, c.dlret \n",
-    "                        FROM crsp.msf AS a \n",
-    "                        LEFT JOIN crsp.msenames AS b\n",
-    "                            ON a.permno=b.permno AND b.namedt<=a.date AND a.date<=b.nameendt\n",
-    "                        LEFT JOIN crsp.msedelist as c\n",
-    "                            ON a.permno=c.permno AND date_trunc('month', a.date) = date_trunc('month', c.dlstdt)                        \n",
-    "                            WHERE a.date BETWEEN '{start_date}' AND COALESCE(%(end)s, CURRENT_DATE) \n",
-    "                \"\"\"\n",
-    "    \n",
-    "    df = wrds_api.download(sql_string, wrds_username=wrds_username, params={'end':end_date})\n",
-    "\n",
-    "########################## THIS SHOULD BE IN ITS OWN FUNCTION\n",
-    "    #Adjust for delisting returns using Shumway and Warther (1999) and Johnson and Zhao (2007)\n",
     "    df['npdelist'] = (df['dlstcd']==500) | df['dlstcd'].between(520,584)\n",
     "    df['dlret'] = np.where(df.dlret.isna() & df.npdelist & df.exchcd.isin([1,2]), -0.35, df.dlret)\n",
     "    df['dlret'] = np.where(df.dlret.isna() & df.npdelist & df.exchcd.isin([3]), -0.55, df.dlret)\n",
     "    df['dlret'] = np.where(df.dlret.notna() & df.dlret < -1, -1, df.dlret)\n",
     "    df['dlret'] = df.dlret.fillna(0)\n",
     "\n",
-    "    df['ret_adj'] = (1 + df.ret) * (1 + df.dlret) - 1\n",
-    "    df['ret_adj'] = np.where(df.ret_adj.isna() & (df.dlret!=0), df.dlret, df.ret_adj)\n",
-    "####################################################################\n",
+    "    df[adj_ret_var] = (1 + df.ret) * (1 + df.dlret) - 1\n",
+    "    df[adj_ret_var] = np.where(df[adj_ret_var].isna() & (df.dlret!=0), df.dlret, df[adj_ret_var])\n",
+    "    df = df.drop('npdelist', axis=1) \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; else `permno`, `permco`, `date`, and 'exchcd' are added by default\n",
+    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
+    "             start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
+    "             end_date: str=None, # End date in MM/DD/YYYY format; if None, defaults to current date  \n",
+    "             add_delist_adj_ret: bool=True, # Whether to calculate delisting-adjusted returns \n",
+    "             adj_ret_var: str='ret_adj' # What to call the returns adjusted for delisting bias\n",
+    "             ) -> pd.DataFrame:\n",
+    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS crsp.msf and crsp.msenames libraries. \n",
+    "        Creates `ret_adj` for delisting based on Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
     "\n",
+    "    varlist_string = parse_varlist(vars, wrds_username)\n",
+    "    sql_string = f\"\"\"SELECT {varlist_string},  c.dlstcd, c.dlret \n",
+    "                        FROM crsp.msf AS a \n",
+    "                        LEFT JOIN crsp.msenames AS b\n",
+    "                            ON a.permno=b.permno AND b.namedt<=a.date AND a.date<=b.nameendt                     \n",
+    "                        LEFT JOIN crsp.msedelist as c\n",
+    "                            ON a.permno=c.permno AND date_trunc('month', a.date) = date_trunc('month', c.dlstdt)                            \n",
+    "                            WHERE a.date BETWEEN '{start_date}' AND COALESCE(%(end)s, CURRENT_DATE) \n",
+    "                \"\"\"\n",
+    "    df = wrds_api.download(sql_string, wrds_username=wrds_username, params={'end':end_date})\n",
+    "    if add_delist_adj_ret: df = delist_adj_ret(df, adj_ret_var)\n",
+    "    else: df = df.drop(['dlret','dlstcd'], axis=1)\n",
     "    return df "
    ]
   },
@@ -202,136 +222,18 @@
        "      <th>ncusip</th>\n",
        "      <th>dlstcd</th>\n",
        "      <th>dlret</th>\n",
-       "      <th>npdelist</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10026.0</td>\n",
-       "      <td>7976.0</td>\n",
-       "      <td>2021-01-29</td>\n",
-       "      <td>-0.017442</td>\n",
-       "      <td>-0.017442</td>\n",
-       "      <td>18980.0</td>\n",
-       "      <td>152.660004</td>\n",
-       "      <td>46603210</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2052.0</td>\n",
-       "      <td>JJSF</td>\n",
-       "      <td>46603210</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>-0.017442</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10028.0</td>\n",
-       "      <td>7978.0</td>\n",
-       "      <td>2021-01-29</td>\n",
-       "      <td>0.203846</td>\n",
-       "      <td>0.203846</td>\n",
-       "      <td>26925.0</td>\n",
-       "      <td>6.260000</td>\n",
-       "      <td>29402E10</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>5094.0</td>\n",
-       "      <td>ELA</td>\n",
-       "      <td>29402E10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.203846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10032.0</td>\n",
-       "      <td>7980.0</td>\n",
-       "      <td>2021-01-29</td>\n",
-       "      <td>-0.016494</td>\n",
-       "      <td>-0.016494</td>\n",
-       "      <td>28766.0</td>\n",
-       "      <td>76.919998</td>\n",
-       "      <td>72913210</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>3670.0</td>\n",
-       "      <td>PLXS</td>\n",
-       "      <td>72913210</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>-0.016494</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10044.0</td>\n",
-       "      <td>7992.0</td>\n",
-       "      <td>2021-01-29</td>\n",
-       "      <td>0.071605</td>\n",
-       "      <td>0.071605</td>\n",
-       "      <td>6074.0</td>\n",
-       "      <td>4.340000</td>\n",
-       "      <td>77467X10</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2060.0</td>\n",
-       "      <td>RMCF</td>\n",
-       "      <td>77467X10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.071605</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10051.0</td>\n",
-       "      <td>7999.0</td>\n",
-       "      <td>2021-01-29</td>\n",
-       "      <td>-0.068213</td>\n",
-       "      <td>-0.068213</td>\n",
-       "      <td>38109.0</td>\n",
-       "      <td>20.490000</td>\n",
-       "      <td>41043F20</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>4813.0</td>\n",
-       "      <td>HNGR</td>\n",
-       "      <td>41043F20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>-0.068213</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    permno  permco        date       ret      retx   shrout         prc  \\\n",
-       "0  10026.0  7976.0  2021-01-29 -0.017442 -0.017442  18980.0  152.660004   \n",
-       "1  10028.0  7978.0  2021-01-29  0.203846  0.203846  26925.0    6.260000   \n",
-       "2  10032.0  7980.0  2021-01-29 -0.016494 -0.016494  28766.0   76.919998   \n",
-       "3  10044.0  7992.0  2021-01-29  0.071605  0.071605   6074.0    4.340000   \n",
-       "4  10051.0  7999.0  2021-01-29 -0.068213 -0.068213  38109.0   20.490000   \n",
-       "\n",
-       "      cusip  exchcd  shrcd   siccd ticker    ncusip  dlstcd  dlret  npdelist  \\\n",
-       "0  46603210     3.0   11.0  2052.0   JJSF  46603210     NaN    0.0     False   \n",
-       "1  29402E10     2.0   11.0  5094.0    ELA  29402E10     NaN    0.0     False   \n",
-       "2  72913210     3.0   11.0  3670.0   PLXS  72913210     NaN    0.0     False   \n",
-       "3  77467X10     3.0   11.0  2060.0   RMCF  77467X10     NaN    0.0     False   \n",
-       "4  41043F20     1.0   11.0  4813.0   HNGR  41043F20     NaN    0.0     False   \n",
-       "\n",
-       "    ret_adj  \n",
-       "0 -0.017442  \n",
-       "1  0.203846  \n",
-       "2 -0.016494  \n",
-       "3  0.071605  \n",
-       "4 -0.068213  "
+       "Empty DataFrame\n",
+       "Columns: [permno, permco, date, ret, retx, shrout, prc, cusip, exchcd, shrcd, siccd, ticker, ncusip, dlstcd, dlret, ret_adj]\n",
+       "Index: []"
       ]
      },
      "execution_count": null,
@@ -341,7 +243,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "raw.head()"
+    "raw.head(0)"
    ]
   },
   {
@@ -417,13 +319,11 @@
        "      <th>ncusip</th>\n",
        "      <th>dlstcd</th>\n",
        "      <th>dlret</th>\n",
-       "      <th>npdelist</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -449,7 +349,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, permco, ret, retx, shrout, prc, cusip, exchcd, shrcd, siccd, ticker, ncusip, dlstcd, dlret, npdelist, ret_adj]\n",
+       "Columns: [date, dtdate, permco, ret, retx, shrout, prc, cusip, exchcd, shrcd, siccd, ticker, ncusip, dlstcd, dlret, ret_adj]\n",
        "Index: []"
       ]
      },
@@ -521,13 +421,11 @@
        "      <th>shrcd</th>\n",
        "      <th>dlstcd</th>\n",
        "      <th>dlret</th>\n",
-       "      <th>npdelist</th>\n",
        "      <th>ret_adj</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>permno</th>\n",
        "      <th>Mdate</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -546,7 +444,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, dtdate, permco, ret, exchcd, shrcd, dlstcd, dlret, npdelist, ret_adj]\n",
+       "Columns: [date, dtdate, permco, ret, exchcd, shrcd, dlstcd, dlret, ret_adj]\n",
        "Index: []"
       ]
      },
