--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since WRDS is a subscription service, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
+    "Since this is a proprietary dataset, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
    ]
   },
   {
@@ -344,7 +344,7 @@
     "\n",
     "    reqs = ['at', 'lt', 'seq', 'ceq', 'txditc', 'pstk', 'pstkrv', 'pstkl', 'itcb']\n",
     "    if list_reqs: return reqs\n",
-    "    if df is None: df = clean(download_vars=reqs)\n",
+    "    if df is None: df = clean(vars=reqs)\n",
     "    df = df[reqs].copy()\n",
     "\n",
     "    df['pstk'] = df['pstk'].fillna(0)\n",
