--- a/nbs/02_papers/hassan_etal_2019.ipynb
+++ b/nbs/02_papers/hassan_etal_2019.ipynb
@@ -15,15 +15,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download and process data developed by:\n",
+    "This module downloads and processes data developed by:\n",
     "\n",
-    "- Tarek A. Hassan, Stephan Hollander, Laurence van Lent, Ahmed Tahoun, 2019, “Firm-Level Political Risk: Measurement and Effects,”  Quarterly Journal of Economics, 134 (4), pp.2135-2202. https://doi.org/10.1093/qje/qjz021.\n",
+    "- Tarek A. Hassan, Stephan Hollander, Laurence van Lent, Ahmed Tahoun, 2019, “Firm-Level Political Risk: Measurement and Effects,”  Quarterly Journal of Economics, 134 (4), pp.2135-2202. <https://doi.org/10.1093/qje/qjz021>.\n",
     "\n",
-    "The same dataset also contains data developed by the papers below but we will not use it in this module:\n",
+    "The dataset also contains data developed by the papers below, but we will not use it in this module:\n",
     "\n",
     "- Tarek A. Hassan, Stephan Hollander, Laurence van Lent, Ahmed Tahoun, \"The Global Impact of Brexit Uncertainty,\" 2020, NBER Working Paper 26609\n",
     "\n",
-    "- Tarek A. Hassan, Stephan Hollander, Laurence van Lent, Markus Schwedeler, Ahmed Tahoun, \"Firm-level Exposure to Epidemic Diseases: Covid-19, SARS, and H1N1,\" 2020, mimeo London Business School. Avilable at SSRN: https://ssrn.com/abstract=3566530"
+    "- Tarek A. Hassan, Stephan Hollander, Laurence van Lent, Markus Schwedeler, Ahmed Tahoun, \"Firm-level Exposure to Epidemic Diseases: Covid-19, SARS, and H1N1,\" 2020, mimeo London Business School. Avilable at SSRN: <https://ssrn.com/abstract=3566530>"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See the authors' dedicated website for more information on this dataset: https://www.firmlevelrisk.com/"
+    "See the authors' dedicated website for more information on this dataset: <https://www.firmlevelrisk.com/>"
    ]
   },
   {
