--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "# run the following line to clean up README.md file every time you change this index (otherwise dataframes are not rendered correctly)\n",
-    "# sed -i \"/<style scoped>/,/<\\/style>/d\" README.md "
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -26,9 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please visit the [documentation site](https://ionmihai.github.io/finsets/).\n",
+    "[Documentation site](https://ionmihai.github.io/finsets/).\n",
     "\n",
-    "The GitHub page is [here](https://github.com/ionmihai/finsets)."
+    "[GitHub page](https://github.com/ionmihai/finsets)."
    ]
   },
   {
@@ -64,6 +53,22 @@
    "outputs": [],
    "source": [
     "import finsets as fds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from finsets import fred, wrds, papers"
    ]
   },
   {
@@ -182,6 +187,17 @@
     "Get one [here](https://fred.stlouisfed.org/docs/api/api_key.html) and store it in your environment variables under the name `FRED_API_KEY` \n",
     "\n",
     "Alternatively, you can supply the API key directly as the `api_key` parameter in each function in the `fred` module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "# run the following line to clean up README.md file every time you change this index (otherwise dataframes are not rendered correctly)\n",
+    "# sed -i \"/<style scoped>/,/<\\/style>/d\" README.md "
    ]
   }
  ],
